Mysql adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-b26a9cb5-868b-41de-a916-ee66a62ee707;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=developer;password=181716;database=saleswebmvcappdb"
   }
 }
